// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSelectableState.reducer action "REMOVE_BY_ID" work correctly with disabled values and selected values 1`] = `
Object {
  "byId": Object {
    "2": Object {
      "id": 2,
    },
    "3": Object {
      "id": 3,
    },
    "4": Object {
      "id": 4,
    },
  },
  "disabledIds": Object {},
  "itemsIds": Array [
    "2",
    "3",
    "4",
  ],
  "selectedIds": Object {},
}
`;

exports[`useSelectableState.reducer action "TOGGLE_ALL_ROW_SELECTION" work correctly at initial state 1`] = `
Object {
  "1": "user",
  "2": "user",
  "3": "user",
  "4": "user",
}
`;

exports[`useSelectableState.reducer action "TOGGLE_ALL_ROW_SELECTION" work correctly with selected items 1`] = `
Object {
  "1": "none",
  "2": "none",
  "3": "none",
  "4": "none",
}
`;

exports[`useSelectableState.reducer action "UPDATE_DATA" work correctly at initial state 1`] = `
Object {
  "byId": Object {
    "1": Object {
      "id": 1,
    },
    "2": Object {
      "id": 2,
    },
    "3": Object {
      "id": 3,
    },
    "4": Object {
      "id": 4,
    },
  },
  "disabledIds": Object {},
  "itemsIds": Array [
    "1",
    "2",
    "3",
    "4",
  ],
  "selectedIds": Object {},
}
`;

exports[`useSelectableState.reducer action "UPDATE_DATA" work correctly with already existing state data when add more data with duplicate keys 1`] = `
Object {
  "byId": Object {
    "4": Object {
      "id": 4,
    },
    "5": Object {
      "id": 5,
    },
  },
  "disabledIds": Object {},
  "itemsIds": Array [
    "5",
    "4",
  ],
  "selectedIds": Object {},
}
`;

exports[`useSelectableState.reducer action "UPDATE_DATA" work correctly with initial disabled and selected items 1`] = `
Object {
  "byId": Object {
    "1": Object {
      "id": 1,
    },
    "2": Object {
      "id": 2,
    },
  },
  "disabledIds": Object {
    "2": true,
  },
  "itemsIds": Array [
    "1",
    "2",
  ],
  "selectedIds": Object {
    "1": "user",
  },
}
`;
